tests/base/invalid/SetUnion_CompileFail_1.whiley
void System::main([string] args):
    y = 1.0234234
    xs = {1,2,3,4}
    xs = xs ∪ y
    out->println(str(xs))
